<resources>

    <string name="app_name">GeoWarfare</string>
    <string name="title_activity_main">Geowarfare</string>
    <string name="register">S\'inscrire</string>
    <string name="connect">Se connecter</string>
    <string name="login">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="hint_login">Pseudo</string>
    <string name="wrong_login">Vos identifiants semblent faux. Vous pouvez vérifier ?</string>
    <string name="no_network">La connexion internet semble introuvable. Vous pouvez arranger ça mon général ?</string>
    <string name="loading_progress">Connexion en cours&#8230;</string>
    <string name="sample_login">Galaad</string>
    <string name="activities">Activités</string>
    <string name="ally">Alliance</string>
    <string name="army">Armée</string>
    <string name="checkin">Check in</string>
    <string name="settings">Paramètres</string>
    <string name="guide">Guide</string>
    <string name="map">Carte</string>
    <string name="error_map">Une erreur est survenue au chargement de la carte. Vous pouvez réessayer ?</string>
    <string name="impossible_determine_location">Impossible de déterminer votre localisation mon général. Vous pouvez réessayez de lancer le GPS ?</string>
    <string name="foursquare">foursquare</string>
    <string name="choose_local_sector">Choisissez un secteur alentour</string>
    <string name="error_foursquare">Une erreur est survenue lors de la communication avec foursquare. On va essayer d\'arranger ça mon général !</string>
    <string name="neutral_sector">Le secteur est neutre</string>
    <string name="conquest">Conquérir</string>
    <string name="close">Fermer</string>
    <string name="zone_possessed_by">"Le secteur est détenu par le général "</string>
    <string name="units">Unités</string>
    <string name="sample_number">5</string>
    <string name="production">Production</string>
    <string name="sample_text">J\'apprécie les fruits au sirop</string>
    <string name="units_to_send">Unités à envoyer</string>
    <string name="valid">Valider</string>
    <string name="number">"Nombre : "</string>
    <string name="have_to_send_units">Vous devez envoyer des unités au combat pour conquérir une zone mon général !</string>
    <string name="battle_in_progress">Bataille en cours&#8230;</string>
    <string name="battle_is_going_crazy">La bataille fait rage mon général !</string>
    <string name="battle_result">Résultat de bataille</string>
    <string name="battle_result_win">Vous avez brillament vaincu le général </string>
    <string name="battle_result_equal">La bataille s\'est soldée par une égalité avec le général </string>
    <string name="battle_result_defeat">Nous avons perdu cette bataille contre le général </string>
    <string name="battle_result_neutral_sector">Ce secteur neutre est à présent entre vos mains mon général !</string> 
    <string name="loss">"Pertes : "</string>
    <string name="share">Partager</string>
    <string name="troop_management">Gestion des troupes</string>
    <string name="share_battle_result">Partager le résultat de la bataille</string>
    <string name="the_general">"Le général "</string>
    <string name="has_conquest">" a conquis le secteur "</string>
    <string name="against_general">" aux dépends du général "</string>
    <string name="has_lost">" a lamentablement perdu contre le général "</string>
    <string name="and_the_general">" et le général "</string>
    <string name="terrible_battle_between">"Une terrible bataille a fait rage entre le général "</string>
    <string name="avatar">Avatar</string>
    <string name="sectors">Secteurs</string>
    <string name="success">Succès</string>
    <string name="mailbox">Messagerie</string>
    <string name="consult">Consulter</string>
    <string name="nbSuccess">Nombre de succès</string>
    <string name="select_number_units">Sélectionner le nombre d\'unités à envoyer</string>
    <string name="units_in_sector">"Unités dans le secteur : "</string> 
    <string name="units_in_reserve">"Unités en réserve : "</string> 
    <string name="deployment_finished">Déploiement terminé mon général !</string> 
    <string name="event">Evénement</string> 
    <string name="sample_date">03/10/2012 12:16</string> 
    <string name="NMO">Nouvel Ordre Mondial</string>
    <string name="Navaho">Navaho</string>
    <string name="Dynasty">Dynastie Eternelle</string>
    <string name="ROUTINE_PRODUCTION">Une nouvelle vague de recrues est arrivée ! Votre force armée est à présent de PROD unités</string>
    <string name="ROUTINE_battle_title">Bataille</string> 
    <string name="ROUTINE_battle_neutral">Vous avez brillament conquis le secteur neutre SECTORNAME !</string> 
	<string name="ROUTINE_battle_win">Vous avez écrasé le général ENEMYNAME sur le secteur SECTORNAME !</string> 
	<string name="ROUTINE_battle_equality">Une sanglante bataille a eu lieu et s\'est terminée sur un match nul avec le général ENEMYNAME sur le secteur SECTORNAME</string> 
	<string name="ROUTINE_battle_defeat">Vous avez été pulvérisé le général ENEMYNAME sur le secteur SECTORNAME !</string> 
	<string name="refresh_map">Actualiser la position</string> 
	<string name="menu_change_type_map">Changer le type de la carte</string> 
	<string name="nothing_here">On dirait qu\'il n\'y à rien à voir ici pour l\'instant...</string> 
	<string name="menu_checkin_foursquare">Check in sur foursquare</string> 
	<string name="share_location">Partager ma localisation</string> 
	<string name="is_currently_in_sector">" est actuellement dans le secteur "</string> 
	
</resources>