<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables" >

        <ImageView
            android:id="@+id/battleSectorImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/foursquare"
            android:src="@drawable/question" />

        <TextView
            android:id="@+id/battleSectorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/sample_text" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/units"
        android:src="@drawable/tank" />

    <TextView
        android:id="@+id/battleUnitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/sample_number" />

    <EditText
        android:id="@+id/battleUnitEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/units_to_send"
        android:inputType="number" >

        <requestFocus />
    </EditText>

</LinearLayout>