<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/activitiesImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/event"
        android:padding="10dp"
        android:src="@drawable/question" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/activitiesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_login"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/activitiesContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text" />

        <TextView
            android:id="@+id/activitiesDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sample_date"
            android:textColor="@color/holo_blue"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>