<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp"
    tools:ignore="UseCompoundDrawables" >

    <ImageView
        android:id="@+id/sectorListviewImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="2dp"
        android:contentDescription="@string/foursquare"
        android:src="@drawable/question" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_weight="2.0"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sectorListviewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"
            android:textColor="@color/holo_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sectorListviewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/units"
            android:src="@drawable/tank" />

        <TextView
            android:id="@+id/sectorListviewUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sample_number" />
    </LinearLayout>

</LinearLayout>