<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:ignore="Overdraw" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.0"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:layout_weight="2.0"
            android:contentDescription="@string/app_name"
            android:minHeight="250dp"
            android:src="@drawable/simplelogo"
            tools:ignore="NestedWeights" />

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2.0"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            style="@style/GButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:maxWidth="100dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/button2"
            style="@style/GButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:onClick="loginClick"
            android:text="@string/connect" />

    </LinearLayout>

</LinearLayout>