<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="NestedWeights" >

    <LinearLayout
        android:id="@+id/tabbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/holo_grey" android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/tabActivities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:onClick="onActivitiesClick"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2.0"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/activities"
                android:textColor="#fff"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabArmy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:onClick="onArmyClick"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2.0"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/army"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabAlly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:onClick="onAllyClick"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2.0"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/ally"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:onClick="onProfileClick"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tabProfilePseudoLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2.0"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/sample_login"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

</LinearLayout>